src/test/deca/context/invalid/provided/instanceof2.deca
class A{
    int x;
    float t;
}

class B {
    int r;
}
{
    int n;
    boolean b = A instanceof n;
}